--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -77,6 +77,9 @@ div img {
 
 #container-para-comprar {
     background-color: #e7eb90;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 #container-para-comprar>p {
