Mensagem posicionada criando uma div e usando position relative e setando valor de top

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -71,6 +71,11 @@ div img {
     color: white;
 }
 
+#container-de-descricao div {
+    position: relative;
+    top: 100px;
+}
+
 #container-de-descricao>ol {
     padding: 15px 0px;
 }
