--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -34,7 +34,7 @@ div>p:first-child {
 }
 
 div img {
-    background: black;
+    background: white;
 }
 
 .botao-amarelo {
@@ -57,6 +57,8 @@ div img {
 
 .icone {
     height: 15px;
+    width: 15px;
+    background-color: white;
 }
 
 
@@ -143,8 +145,4 @@ td button {
 
 td {
     text-align: center;
-}
-
-img {
-    background-color: white;
 }
