Adicionado efeitos com td button:hover e :active

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -123,6 +123,14 @@ td button {
     color: black;
 }
 
+td button:hover {
+    background-color: #c44f00;
+}
+
+td button:active {
+    color: #2274a5;
+}
+
 .container-do-search {
     margin-top: 20px;
     height: 100px;
