--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -114,6 +114,11 @@ div:last-child {
 
 table {
     width: 60%;
+    margin: 0 auto;
+}
+
+td {
+    text-align: center;
 }
 
 td button {
@@ -157,6 +162,10 @@ td button:active {
     background-color: #635a3d
 }
 
-td {
+.container-do-voltar {
     text-align: center;
+}
+
+.container-do-voltar button {
+    margin: 40px;
 }
